[metadata]
name = tangles-software
version = 1.0.0
author = Tangle Software Contributors
author_email = software@tangles-book.com
description = Tangle Software package
long_description_content_type = text/markdown
url = https://github.com/tangle-software/tangles
project_urls =
    Bug Tracker = https://https://github.com/tangle-software/tangles/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
include_package_data = True
package_dir =
    tangles = tangles
python_requires = >=3.9
install_requires =
    numpy
    scipy
    scikit-learn
    bitarray